# eagine-app

./: .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.rst
assets/: CMakeLists.txt  deb-changelog
assets/blender/: CMakeLists.txt
assets/blender/addons/: CMakeLists.txt  eagimesh_operator_file_export.py
assets/blender/scripts/: bake_to_vertex.py  export_mesh.py  make_vertex_pivots.py  render_cubemap.py  volume_gen.py
assets/models/: CMakeLists.txt  bleach.json  hydrant_1.json  jerrycan.json  milk_can.json  monkey.json  pumpkin.json  traffic_cone.json  wheelcart.json  wheelcart_1.json
assets/other/: CMakeLists.txt  sky.json.txt  sky_hazy_sunrise.json  sky_overcast_day.json  sky_summer_sunset.json
assets/scripts/: obj-to-eagimesh.py  voronoi-svg.py
assets/textures/: CMakeLists.txt  bricks.png.baketex  cloudy_day.png.baketex  cube_map.png.baketex  hydrant.png.baketex  monkey.png.baketex  pumpkin.png.baketex  sky_cloudy_afternoon.eagitex  sky_cloudy_morning.eagitex  sky_cloudy_sunset.eagitex  sky_gray_dusk.eagitex  sky_hazy_sunrise.eagitex  sky_red_dawn.eagitex  sky_summer_dusk.eagitex  sky_summer_sunset.eagitex  stones.png.baketex
assets/tilesets/: CMakeLists.txt  blocks16.eagitexi  connections16.eagitexi  make_eagitexi.sh  nodes16.eagitexi  update_tileset.sh
assets/tilesets/blocks16/: CMakeLists.txt  inkscape_opts
assets/tilesets/connections16/: CMakeLists.txt  tileset_connections16.png.baketex
assets/tilesets/nodes16/: CMakeLists.txt  inkscape_opts
assets/tilesets/thicket16/: CMakeLists.txt  inkscape_opts
assets/tilings/: CMakeLists.txt  _bla.py  _replace_tiling.sh  _to_be_replaced.sh  r4_s1024_00.txt  r4_s1024_01.txt  r4_s1024_02.txt  r4_s1024_03.txt  r4_s1024_04.txt  r4_s1024_05.txt  r4_s1024_06.txt  r4_s1024_07.txt  r4_s1024_08.txt  r4_s1024_09.txt  r4_s1024_10.txt  r4_s1024_11.txt  r4_s1024_12.txt  r4_s1024_13.txt  r4_s1024_14.txt  r4_s1024_15.txt  r4_s256_01.txt  r4_s256_02.txt  r4_s256_03.txt  r4_s256_04.txt  r4_s256_05.txt  r4_s256_06.txt  r4_s256_07.txt  r4_s256_08.txt  r4_s256_09.txt  r4_s256_10.txt  r4_s256_11.txt  r4_s256_12.txt  r4_s256_13.txt  r4_s256_14.txt  r4_s256_15.txt  r4_s512_01.txt  r4_s512_02.txt  r4_s512_03.txt  r4_s512_04.txt  r4_s512_05.txt  (+63 more)
example/eagine/app/: CMakeLists.txt  deb-changelog
include/: CMakeLists.txt  Sources.cmake
include/eagine/app/: camera.hpp  camera.inl  context.hpp  context.inl  framebuffer.hpp  framedump_raw.hpp  framedump_raw.inl  fwd.hpp  geometry.hpp  gpu_program.hpp  input.hpp  input_observers.hpp  interface.hpp  main.hpp  openal_oalplus.hpp  openal_oalplus.inl  opengl_eglplus.hpp  opengl_eglplus.inl  opengl_glfw3.hpp  opengl_glfw3.inl  options.hpp  options.inl  state.hpp  state.inl  state_view.hpp  types.hpp
include/eagine/application/: camera.hpp  context.hpp  context.inl  framedump_raw.hpp  fwd.hpp  input.hpp  interface.hpp  main.hpp  opengl_eglplus.hpp  opengl_eglplus.inl  opengl_glfw3.hpp  opengl_glfw3.inl  options.hpp  state.hpp  state_view.hpp  types.hpp
include/eagine/testing/: unit_begin_app.hpp  unit_end_app.hpp
source/: CMakeLists.txt
source/app/: CMakeLists.txt  add-cubemap-blur.py  blender-bake-light.py  blender-bake-to-vertex.py  blender-export-mesh.py  blender-make-vertex-pivots.py  blender-render-cubemap.py  deb-changelog  eagitex-cubemap-blur.py  make-voronoi-svg.py  obj-to-eagimesh.py
source/app/model_viewer/: CMakeLists.txt  background.cpp  background.hpp  background_impl.cpp  backgrounds.cpp  backgrounds.hpp  backgrounds_impl.cpp  deb-changelog  geometry.cpp  geometry.hpp  geometry_impl.cpp  gpu_program.cpp  launchpad.cpp  launchpad_impl.cpp  main.cpp  main.hpp  model_viewer.cpp  model_viewer_impl.cpp  models.cpp  models.hpp  models_impl.cpp  program.cpp  program.hpp  program_impl.cpp  programs.cpp  programs.hpp  programs_impl.cpp  resource.cpp  resource.hpp  resource_impl.cpp  special_args.cpp  special_args.hpp  texture.cpp  texture.hpp  texture_impl.cpp  textures.cpp  textures.hpp  textures_impl.cpp
source/app/resource_provider/: CMakeLists.txt  common.cpp  common.hpp  common_impl.cpp  deb-changelog  driver.cpp  driver.hpp  driver_impl.cpp  eagitex_provider.cpp  eagitex_provider.hpp  eagitexi_checks.cpp  eagitexi_checks_impl.cpp  eagitexi_cubemap_blur_impl.cpp  eagitexi_provider.cpp  eagitexi_provider.hpp  eagitexi_provider_impl.cpp  eagitexi_random.cpp  eagitexi_random_impl.cpp  eagitexi_single_color.cpp  eagitexi_single_color_impl.cpp  eagitexi_sphere_volume.cpp  eagitexi_sphere_volume_impl.cpp  eagitexi_stripes.cpp  eagitexi_stripes_impl.cpp  eagitexi_tiling.cpp  eagitexi_tiling_impl.cpp  eagitexi_transition_impl.cpp  embedded.cpp  embedded_impl.cpp  external_apis.cpp  external_apis_impl.cpp  file.cpp  file_impl.cpp  gl_context.cpp  gl_context_impl.cpp  main.cpp  ostream_io.cpp  ostream_io.hpp  provider_lorem_ipsum.cpp  providers.cpp  (+11 more)
source/app/sky_viewer/: CMakeLists.txt  background.cpp  background_impl.cpp  backgrounds.cpp  backgrounds_impl.cpp  deb-changelog  launchpad_impl.cpp  main.cpp  resource.cpp  resource_impl.cpp  sky_viewer.cpp  sky_viewer_impl.cpp  texture.cpp  texture_impl.cpp  textures.cpp  textures_impl.cpp
source/app/tiling_viewer/: CMakeLists.txt  deb-changelog  geometry.cpp  geometry_impl.cpp  launchpad_impl.cpp  main.cpp  models.cpp  models_impl.cpp  program.cpp  program_impl.cpp  programs.cpp  programs_impl.cpp  resource.cpp  resource_impl.cpp  texture.cpp  texture_impl.cpp  textures.cpp  textures_impl.cpp  tiling_viewer.cpp  tiling_viewer_impl.cpp
source/lib/: CMakeLists.txt  camera.cpp  context.cpp  eglplus.cpp  epilogue.inl  framedump.cpp  glfw3.cpp  implement.inl  oalplus.cpp  options.cpp  prologue.inl
source/modules/eagine/: CMakeLists.txt  app.cpp  background.cpp  background_impl.cpp  camera.cpp  camera_impl.cpp  context.cpp  context_impl.cpp  deb-changelog  framebuffer.cpp  framedump_raw.cpp  framedump_raw_impl.cpp  geometry.cpp  geometry_impl.cpp  gpu_program.cpp  implementation.cpp  input.cpp  interface.cpp  loaded_resource.cpp  (+37 more)
submodules/: CMakeLists.txt
tools/: CMakeLists.txt  app-framedump.py  app_framedump.py
(+460 files in other folders)
